	PR c++/8214 	* g++.dg/init/string1.C: New test.

PR c++/8214
	* typeck.c (convert_for_assignment): Do not use
	decl_constant_value on the operand.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@59668 138bc75d-0d04-0410-961f-82ee72b054a4