gcc/testsuite/g++.dg/init/string1.C
@@ -1,0 +1,8 @@
+extern void f (char*);
+
+extern const char * const target = "foo";
+
+void g ()
+{
+  f (target); // { dg-error "conversion" }
+}
